CHANGES IN VERSION 1.25
-----------------------

BUG FIXES

    o *File constructors now check that the file argument is length 1,
      and that the index argument is length 0 or 1.

CHANGES IN VERSION 1.23
-----------------------

NEW FEATURES

    o filterBam can filter one source file into multiple destinations
      by providing a vector of destination files and a list of
      FilterRules.

    o phred2ASCIIOffset() helps translate PHRED encodings (integer or
      character) to ASCII offsets for use in pileup()

BUG FIXES

    o scanBam() fails early when param seqlevels not present in file.

    o Rsamtools.mk for Windows avoids spaces in file paths

CHANGES IN VERSION 1.21
-----------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o pileup adds query_bins arg to give strand-sensitive cycle bin
      behavior; cycle_bins renamed left_bins; negative values allowed
      (including -Inf) to specify bins based on distance from
      end-of-read.

    o mapqFilter allows specification of a mapping quality filter
      threshold

    o PileupParam() now correctly follows samtools with
      min_base_quality=13, min_map_quality=0 (previously, values were
      assigned as 0 and 13, respectively)

    o Support parsing 'B' tags in bam file headers.

BUG FIXES

    o segfault on range iteration introduced 1.19.35, fixed in 1.21.1

    o BamViews parallel evaluation with BatchJobs back-end requires
      named arguments

CHANGES IN VERSION 1.19
-----------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o FaFile accepts a distinct index file

    o Support for cigars > 32767 characters

    o Mate pairs use pos and mpos values calculated modulo target
      length for pairing, facilitating some representations of mates
      on circular chromosomes.

    o scanBam no longer translates mapq '255' to 'NA'

BUG FIXES

    o segfault on file iteration, introduced in 1.19.35, fixed in
      1.19.44

    o scanBam correctly parses '=' and 'X'
